--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <header class="header">
     <nav class="header-nav">
       <ul class="header-nav__list">
+        <li class="nav__item"><a href="./salary/index.html" class="nav__link">salary</a></li>
         <li class="nav__item"><a href="./high-pass/index.html" class="nav__link">high-pass</a></li>
         <li class="nav__item"><a href="./evklid/index.html" class="nav__link">evklid</a></li>
         <li class="nav__item"><a href="./redumin/index.html" class="nav__link">redumin</a></li>
