--- a/salary/index.html
+++ b/salary/index.html
@@ -15,7 +15,7 @@
    <main class="main">
       <div class="links">
          <a href="#" class="link link-active">По окладу</a>
-         <a href="https://dzhunkovskiy.ru/salary/hour.html" class="link">Почасовой</a>
+         <a href="/hour.html" class="link">Почасовой</a>
       </div>
       <form class="form">
          <div class="wrapper">
