--- a/salary/hour.html
+++ b/salary/hour.html
@@ -14,7 +14,7 @@
 <body>
    <main class="main">
       <div class="links">
-         <a href="https://dzhunkovskiy.github.io/dzhunkovskiy.ru/salary/hour.html" class="link">По окладу</a>
+         <a href="https://dzhunkovskiy.github.io/dzhunkovskiy.ru/salary/index.html" class="link">По окладу</a>
          <a href="#" class="link link-active">Почасовой</a>
       </div>
       <form class="form">
