--- a/salary/index.html
+++ b/salary/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="css/style.css?5v">
+<link rel="stylesheet" href="css/style.css?6v">
 <link rel="shortcut icon" type="image/x-icon" href="img/money.ico">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
@@ -42,9 +42,11 @@
          <div class="result display-none">
             <div class="top-donaters">
                <h3 class="top-donaters_head">Последние поблагодарившие:</h3>
-                  <ul class="top-donaters_list">
+                  <ul class="top-donaters_list">      
+                     <style class="style" type="text/css"></style>
                      <li class="donater">Анатолий П. - 100р</li>
                      <li class="donater">Игорь А. - 100р</li>
+                     <li class="donater">Игорь А. - 40р</li>
                   </ul>
          </div>
             <p class="note">
@@ -52,9 +54,24 @@
             </p>
             <div class="line5">РЕЗУЛЬТАТ:</div>
             <div class="sum">0 Р</div>
-            <div class="donate">
-               <a href="https://www.tinkoff.ru/rm/dzhunkovskiy.fedor1/uU7vz5753/" class="donate-link button">скинуть автору на кофе</a>
-            </div>     
+            <button type="button" class="link-instruction button">Как добавить на главный экран</button>
+            <div class="video-instruction display-none">
+               <div class="close-btn close-btn-inst">закрыть</div>
+               <img src="img/instruction.gif" alt="" class="video-instruction-img">
+            </div>
+            <div class="ref-frame display-none">
+               <div class="close-btn close-btn-ref">закрыть</div>
+               <h3 class="ref-header">Все сервисы проверены лично мной!</h3>
+               <ul class="ref-list">
+                  <li class="ref-item"><a href="https://tinkoff.ru/baf/2KSEueCXv84" class="ref-link">Получить до 3500 р.</a></li>
+                  <li class="ref-item"><a href="https://megabonus.com/invite/cKm5PPeaNyjPfNkU7" class="ref-link">Хороший кешбек сервис для Aliexpress и не только</a></li>
+                  <li class="ref-item">Скидка 200р на первую покупку в Яндекc-маркете по промокоду <b>REF_WUWMMAM</b></li>
+                  <li class="ref-item"><a href="https://plus.yandex.ru/gift?promoName=referral&promocode=4LQ7PRJV6T" class="ref-link">60 дней бесплатной подписки на Кинопоиск, Яндекс Музыка</a></li>
+                  <li class="ref-item"><a href="https://www.tinkoff.ru/baf/5ow1j3lDu1V" class="ref-link">Дебетовая карта с кешбеком рублями и бесплатным обслуживанием</a></li>
+               </ul>
+            </div>
+            <a href="https://www.tinkoff.ru/rm/dzhunkovskiy.fedor1/uU7vz5753/" class="donate-link button">скинуть автору на кофе</a>       
+            <button type="button" class="donate-link button ref-btn">ПОЛЕЗНОСТИ</button>      
             <button type="button" class="reset button display-none">СБРОСИТЬ</button>       
          </div>
          <div class="buttons">
