--- a/index.html
+++ b/index.html
@@ -1,35 +1,94 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/normalize.css" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <title>Portfolio</title>
+    </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Portfolio</title>
-</head>
-
-<body class="page-body">
-  <header class="header">
-    <nav class="header-nav">
-      <ul class="header-nav__list">
-        <li class="nav__item"><a href="./salary/index.html" class="nav__link">salary</a></li>
-        <li class="nav__item"><a href="./high-pass/index.html" class="nav__link">high-pass</a></li>
-        <li class="nav__item"><a href="./evklid/index.html" class="nav__link">evklid</a></li>
-        <li class="nav__item"><a href="./redumin/index.html" class="nav__link">redumin</a></li>
-        <li class="nav__item"><a href="./technomart/index.html" class="nav__link">technomart</a></li>
-        <li class="nav__item"><a href="./lonic/index.html" class="nav__link">lonic</a></li>
-        <li class="nav__item"><a href="./pair-game/index.html" class="nav__link">pair-game</a></li>
-        <li class="nav__item"><a href="./students-database/index.html" class="nav__link">students-database</a></li>
-        <li class="nav__item"><a href="./todo-app/index.html" class="nav__link">todo-app</a></li>
-        <li class="nav__item"><a href="./blanchard-email/index.html" class="nav__link">blanchard-email</a></li>
-        <li class="nav__item"><a href="./js-animation/index.html" class="nav__link">js-animation</a></li>
-        <li class="nav__item"><a href="./sprites/index.html" class="nav__link">sprites</a></li>
-        <li class="nav__item"><a href="./hotels/index.html" class="nav__link">hotels</a></li>
-        <li class="nav__item"><a href="./kreposti/index.html" class="nav__link">kreposti</a></li>
-      </ul>
-    </nav>
-  </header>
-</body>
-
+    <body class="page-body">
+        <header class="header">
+            <nav class="header-nav">
+                <ul class="header-nav__list">
+                    <li class="nav__item">
+                        <a href="./salary/index.html" class="nav__link"
+                            >salary</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./high-pass/index.html" class="nav__link"
+                            >high-pass</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./evklid/index.html" class="nav__link"
+                            >evklid</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./redumin/index.html" class="nav__link"
+                            >redumin</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./technomart/index.html" class="nav__link"
+                            >technomart</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./lonic/index.html" class="nav__link">lonic</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./pair-game/index.html" class="nav__link"
+                            >pair-game</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a
+                            href="./students-database/index.html"
+                            class="nav__link"
+                            >students-database</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./todo-app/index.html" class="nav__link"
+                            >todo-app</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./blanchard-email/index.html" class="nav__link"
+                            >blanchard-email</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./js-animation/index.html" class="nav__link"
+                            >js-animation</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./sprites/index.html" class="nav__link"
+                            >sprites</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./hotels/index.html" class="nav__link"
+                            >hotels</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./kreposti/index.html" class="nav__link"
+                            >kreposti</a
+                        >
+                    </li>
+                    <li class="nav__item">
+                        <a href="./4.3.7/index.html" class="nav__link"
+                            >kreposti</a
+                        >
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
