--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
                         >
                     </li>
                     <li class="nav__item">
-                        <a href="./4.3.7/index.html" class="nav__link"
-                            >kreposti</a
-                        >
+                        <a href="./4.3.7/index.html" class="nav__link">4.3.7</a>
                     </li>
                 </ul>
             </nav>
