--- a/4.3.7/index.html
+++ b/4.3.7/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>JS CORE 4.3.7</title>
-        <link rel="stylesheet" href="../style.css" />
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body class="page-body">
-        <script src="../script.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
