--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                     <li class="nav__item">
                         <a href="./4.3.7/index.html" class="nav__link">4.3.7</a>
                     </li>
+                    <li class="nav__item">
+                        <a href="./svoya-igra/index.html" class="nav__link"
+                            >Своя игра</a
+                        >
+                    </li>
                 </ul>
             </nav>
         </header>
